<resources>
    <string name="app_name">NUMAD25Sp_HongGuo</string>
    <string name="about_me">About Me</string>
    <string name="hello_world">Hello World!</string>
    <string name="about_me_text">Name: Hong Guo\nEmail: guo.hong1@northeastern.edu</string>
    <string name="quic_calc">Quic Calc</string>

    <!-- Calculator strings -->
    <string name="calc_display">CALC</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_x">x</string>
    <string name="button_equals">=</string>

    <!--  Contact Strings -->
    <string name="contacts_collector">Contacts Collector</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="empty_fields_error">Name and phone number cannot be empty</string>
    <string name="contact_added">Contact added successfully</string>
    <string name="contact_updated">Contact updated successfully</string>
    <string name="contact_deleted">Contact deleted successfully</string>
    <string name="delete_confirmation">Are you sure you want to delete this contact?</string>
    <string name="permission_denied">Call permission denied</string>
    <string name="undo">UNDO</string>

    <!-- Prime Strings   -->
    <string name="prime_button">Prime</string>
    <string name="find_primes">Find Primes</string>
    <string name="terminate_search">Terminate Search</string>
    <string name="pacifier_switch">Pacifier Switch</string>

</resources>