<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Previous Prime Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/previousPrimeCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Previous Prime:"
                android:textColor="#192AB6"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/previousPrimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Current Searching Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/currentSearchCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="@id/previousPrimeCard"
        app:layout_constraintStart_toStartOf="@id/previousPrimeCard"
        app:layout_constraintTop_toBottomOf="@id/previousPrimeCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Searching:"
                android:textColor="#192AB6"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/currentSearchingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Find Primes Button -->
    <Button
        android:id="@+id/find_primes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:padding="16dp"
        android:text="@string/find_primes"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:backgroundTint="#192AB6"
        app:layout_constraintEnd_toEndOf="@id/currentSearchCard"
        app:layout_constraintStart_toStartOf="@id/currentSearchCard"
        app:layout_constraintTop_toBottomOf="@id/currentSearchCard" />

    <!-- Terminate Search Button -->
    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/terminate_search"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:backgroundTint="#B71C1C"
        app:layout_constraintEnd_toEndOf="@id/find_primes"
        app:layout_constraintStart_toStartOf="@id/find_primes"
        app:layout_constraintTop_toBottomOf="@id/find_primes" />

    <!--  Pacifier Switch Checkbox  -->
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/pacifier_switch"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/button10"
        app:layout_constraintStart_toStartOf="@id/button10"
        app:layout_constraintTop_toBottomOf="@id/button10" />

</androidx.constraintlayout.widget.ConstraintLayout>